# weather-analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: weather.py
app/core/: config.py
app/models/: weather.py
app/services/: aggregator.py
app/services/weather_providers/: base.py  open_meteo.py  openweather.py  weatherapi.py  weatherbit.py  weatherbit_forecast.py  weatherstack.py
src/: README.md
src/airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  test_etl.py
src/airflow/dags/: connector__mongo_postgres_dag.py  connector__mongo_postgres_logic.py  dbt_weather_marts_dag.py  weather_data_collection_dag.py
src/app/: .env.example  Dockerfile  README.md  check_mongo.py  docker-compose.yml  pyproject.toml
src/app/app/core/: config.py
src/app/app/db/: mongodb.py
src/app/app/models/: weather.py
src/app/app/services/: aggregator.py
src/dbt/: .env.example  .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  requirements.txt
src/dbt/macros/: scd_helpers.sql  temperature_conversion.sql  wind_direction.sql
src/dbt/models/dm/: dm_city_weather_summary.sql  dm_forecast_accuracy_by_interval.sql  dm_provider_ranking.sql  dm_schema.yml
src/dbt/models/marts/: mart_cities.sql  mart_weather_daily_avg.sql  mart_weather_hourly.sql  schema.yml
src/dbt/models/ods/: ods_schema.yml  ods_weather_forecasts.sql  ods_weather_observations.sql
src/dbt/models/staging/: schema.yml  sources.yml  stg_weather_current.sql  stg_weather_forecast.sql
src/dbt/models/stg/: stg_schema.yml  stg_weather_current.sql  stg_weather_forecast.sql
src/dbt/seeds/: cities.csv
src/dbt/tests/generic/: test_consistent_city_coordinates.sql  test_reasonable_feels_like_difference.sql
src/dwh/: .env.example  docker-compose.yml
tests/: conftest.py  test_aggregator.py  test_api.py  utils.py
tests/providers/: test_open_meteo.py  test_openweather.py  test_weatherapi.py  test_weatherbit.py  test_weatherstack.py
(+12 files in other folders)
