[tool.poetry]
name = "weather-analytics"
version = "0.1.0"
description = "FastAPI сервис-агрегатор погоды из нескольких публичных API"
readme = "README.md"
authors = [
  "Dmitry Erofeev",
  "Eduard Polyakov",
  "Maxim Piskaev",
]
license = "MIT"

packages = [
  { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
httpx = ">=0.27.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-anyio = ">=0.0.0"
ruff = ">=0.6.0"
black = ">=24.0.0"
mypy = ">=1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
